--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # ======================
 # 2. ブログ公開に必要なファイルのみ許可 (Allowlist)
 # ======================
+!.nojekyll
 !.gitignore
 !index.html
 !style.css
